--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
